# MazeSim

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/agents/: AStarAgent.cpp  AStarAgent.h  AgentBase.h  AgentMetrics.h  BFSAgent.cpp  BFSAgent.h  Environment.h  FrontierExplorerAgent.cpp  FrontierExplorerAgent.h  IAgent.h  KnowledgeMap.h  ManualAgent.cpp  ManualAgent.h  RightHandAgent.cpp  RightHandAgent.h
src/core/: Directions.h  Maze.cpp  Maze.h  RNG.cpp  RNG.h  Types.h
src/generators/: CellularAutomataGenerator.cpp  CellularAutomataGenerator.h  IMazeGenerator.h  PrimGenerator.cpp  PrimGenerator.h  RecursiveBacktrackerGenerator.cpp  RecursiveBacktrackerGenerator.h
src/pathfinding/: AStarPathfinder.cpp  AStarPathfinder.h  BFSPathfinder.cpp  BFSPathfinder.h  IPathfinder.h  PathTypes.h
src/sim/: Leaderboard.cpp  Leaderboard.h  Simulation.cpp  Simulation.h
src/ui/: App.cpp  App.h  Renderer.cpp  Renderer.h  Widgets.cpp  Widgets.h
